JobScheduler changed to GcmNetworkManager to support <21

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,6 +69,8 @@ dependencies {
 		transitive = true
 	}
 
+	implementation 'com.google.android.gms:play-services-gcm:12.0.1'
+
 
 }
 // debugImplementation 'com.amitshekhar.android:debug-db:1.0.1'
