--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -99,8 +99,10 @@
 
 		<service
 			android:name=".services.CheckRssService"
-			android:permission="android.permission.BIND_JOB_SERVICE">
-
+			android:permission="com.google.android.gms.permission.BIND_NETWORK_TASK_SERVICE">
+			<intent-filter>
+				<action android:name="com.google.android.gms.gcm.ACTION_TASK_READY"/>
+			</intent-filter>
 		</service>
 
 		<meta-data
