--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,8 +12,8 @@ android {
 		applicationId "in.net.kccollege.student"
 		minSdkVersion 19
 		targetSdkVersion 27
-		versionCode 7
-		versionName "1.4.1"
+		versionCode 9
+		versionName "1.5.0"
 		testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
 	}
@@ -21,6 +21,9 @@ android {
 		release {
 			minifyEnabled true
 			proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+		}
+		debug {
+			resValue("string", "PORT_NUMBER", "8081")
 		}
 	}
 
@@ -65,10 +68,11 @@ dependencies {
 
 	implementation 'com.google.firebase:firebase-messaging:12.0.1'
 	implementation 'com.google.firebase:firebase-core:12.0.1'
-	implementation('com.crashlytics.sdk.android:crashlytics:2.9.1@aar') {
-		transitive = true
+	implementation('com.crashlytics.sdk.android:crashlytics:2.9.5@aar') {
+		transitive = true;
 	}
-
+//	debugImplementation 'com.amitshekhar.android:debug-db:1.0.3'
+	
 	implementation 'com.google.android.gms:play-services-gcm:12.0.1'
 
 
